--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,8 @@
 nav {
+  box-sizing: border-box;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   height: 120px;
   background-color: #4056A1;
   color: #FFFFFF;
@@ -11,4 +14,14 @@ nav {
   
   nav span {
     font-family: "Bungee", sans-serif;
+    color: #A19930;
   }
+
+  #top-icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #A19930;
+  }
+
+  
