--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -14,3 +14,20 @@ header h2 {
   color:  #6348A1;
   font-weight: bold;
 }
+
+@media (min-width: 1024px) {
+  .header-main {
+    min-height: 350px;
+    max-width: 25%;
+    float: left;
+    margin: 195px 3%;
+
+  }
+  .container {
+    max-width: 60%;
+    float: right;
+    margin: 150px 3% 25px;
+  }
+
+}
+
