--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -24,4 +24,33 @@ nav {
     color: #A19930;
   }
 
+  .bounce {
+    -moz-animation: bounce 2s infinite;
+    -webkit-animation: bounce 2s infinite;
+    animation: bounce 2s infinite;
+  }
   
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(15px);
+    }
+    40% {
+      transform: translateY(-10px);
+    }
+    60% {
+      transform: translateY(-1px);
+    }
+  }
+  
+  @media (max-width: 768px) {
+    nav {
+      flex-direction: column;
+  }
+    .header-main div img {
+      display: none;
+    }
+    
+    .header-main {
+      max-height: 133px;
+    }
+}
