--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,6 +1,8 @@
 .tweet {
   border: solid 5px;
   opacity: .7;
+  margin-bottom: 12px;
+  padding: 10px;
 }
 
 .tweet:hover {
@@ -10,7 +12,7 @@
 
 .tweet hr {
   border-top: solid 5px;
-  width: 96%;
+  width: 99%;
 }
 
 .tweet header {
